# titanium

./: Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
src/: gdt.rs  idt.rs  io.rs  lib.rs  main.rs  serial.rs  sync.rs  vga_buffer.rs
tests/: boot.rs  panic.rs  stack_overflow.rs
