[package]
name = "titanium"
version = "0.1.0"
edition = "2021"

[package.metadata.bootimage]
test-args = [
  "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
  "-serial", "stdio",
  "-display", "none",
]
test-success-exit-code = 33

[features]
debug = []

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

[dev-dependencies.titanium]
path = "."
features = ["debug"]
